第一版后台管理

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     		<sidebar class="col-md-2 col-xs-12 sidebar collapse" id="sidebar">
     			<ul class="nav nav-sidebar">
     				<li><a href="#" class="active">订单管理</a></li>
-    				<li><a href="./pages/homescene.html">首页信息管理</a></li>
-    				<li><a href="#">第一屏管理</a></li>
-    				<li><a href="#">教师信息管理</a></li>
-    				<li><a href="#">发布公告</a></li>
+            <li><a href="./pages/homescene.html">首页信息管理</a></li>
+            <li><a href="./pages/loadPage.html">第一屏管理</a></li>
+            <li><a href="./pages/teacher.html">教师信息管理</a></li>
+            <li><a href="./pages/anno.html">发布公告</a></li>
     			</ul>
           <a href="#" class="btn btn-primary loginBtn"><span class="glyphicon glyphicon-off"></span> 登出</a>
     		</sidebar>
